feat: roles, credito en ventas, etc

--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.scss
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.scss
@@ -29,3 +29,11 @@
 .anulada-row {
   background-color: #f2f2f2;
 }
+
+button[disabled] .facturar {
+  opacity: 0.5;
+}
+
+button[disabled] .eliminar {
+  opacity: 0.5;
+}
