--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
@@ -236,3 +236,8 @@
   opacity: 0.5;
   pointer-events: none; /* Desactiva la interacción del usuario */
 }
+
+.summary-container-spacing {
+  margin-bottom: 16px; // Espaciado entre el contenedor y el divider
+}
+
