--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.scss
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.scss
@@ -30,3 +30,10 @@
   pointer-events: none;
   opacity: 0.6;
 }
+
+.leyenda {
+  font-size: 0.7rem;
+  color: #555;
+  opacity: 0.7;
+  vertical-align: middle;
+}
