--- a/src/app/modules/qr-ventana/qr-ventana.component.scss
+++ b/src/app/modules/qr-ventana/qr-ventana.component.scss
@@ -30,6 +30,6 @@
   --estado-color: #ff9800; /* Naranja */
 }
 
-.estado-pago .procesada {
+.estado-pago .completada {
   --estado-color: #4caf50; /* Verde */
 }
