--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -89,7 +89,7 @@
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
-          <mat-table [dataSource]="tableDataSource" matSort>
+          <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
 
             <ng-container matColumnDef="id">
               <mat-header-cell *matHeaderCellDef mat-sort-header>NÚMERO DE VENTA</mat-header-cell>
