--- a/src/app/modules/venta/detalle-venta/detalle-venta.component.scss
+++ b/src/app/modules/venta/detalle-venta/detalle-venta.component.scss
@@ -10,3 +10,20 @@
   border: 1px solid #ddd;
   margin: 5px 0;
 }
+
+@media (max-width: 992px) {
+  .custom-table {
+    width: 100%;
+    overflow-x: auto;  /* Habilitar el desplazamiento en pantallas medianas */
+  }
+  .mat-mdc-table mat-header-row.mat-mdc-header-row, .mat-mdc-table mat-row.mat-mdc-row, .mat-mdc-table mat-footer-row.mat-mdc-footer-cell {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 768px) {
+  .custom-table {
+    width: 100%;
+    min-width: 700px;  /* Reducimos el ancho mínimo en pantallas más pequeñas */
+  }
+}
