--- a/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
+++ b/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
         <p class="titulo">Ordenes de Compra</p>
-        <button mat-stroked-button color="warn" class="btn round mb-3 botonR" (click)="registrarNuevoPedido()">Registrar nueva orden de compra</button>
+        <button mat-stroked-button color="warn" class="btn round mb-3 botonR btn-registrar" (click)="registrarNuevoPedido()">Registrar nueva orden de compra</button>
       </div>
     </div>
 
