--- a/src/app/modules/comprobante/consultar-comprobante/consultar-comprobante.component.html
+++ b/src/app/modules/comprobante/consultar-comprobante/consultar-comprobante.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
         <p class="titulo">Comprobantes</p>
-        <button mat-stroked-button color="warn" class="btn round mb-3 botonR" (click)="registrarNuevoComprobante()">Registrar nuevo comprobante</button>
+        <button mat-stroked-button color="warn" class="btn round mb-3 botonR btn-registrar" (click)="registrarNuevoComprobante()">Registrar nuevo comprobante</button>
       </div>
     </div>
 
