--- a/src/app/modules/comprobante/consultar-comprobante/consultar-comprobante.component.scss
+++ b/src/app/modules/comprobante/consultar-comprobante/consultar-comprobante.component.scss
@@ -3,3 +3,12 @@
   width: 100%;
   min-width: 900px;  /* Reducimos el ancho mínimo en pantallas más pequeñas */
 }
+
+@media (max-width: 992px) {
+  .btn-registrar {
+    padding: 25px;
+  }
+  .mat-mdc-table mat-header-row.mat-mdc-header-row, .mat-mdc-table mat-row.mat-mdc-row, .mat-mdc-table mat-footer-row.mat-mdc-footer-cell {
+    font-size: 12px;
+  }
+}
