--- a/src/app/modules/gerencia/consultar-arqueo-caja/consultar-arqueo-caja.component.scss
+++ b/src/app/modules/gerencia/consultar-arqueo-caja/consultar-arqueo-caja.component.scss
@@ -16,3 +16,17 @@
 button[disabled] .eliminar {
   opacity: 0.5;
 }
+
+.custom-table {
+  width: 100%;
+  min-width: 900px;  /* Reducimos el ancho mínimo en pantallas más pequeñas */
+}
+
+@media (max-width: 992px) {
+  .btn-registrar {
+    padding: 25px;
+  }
+  .mat-mdc-table mat-header-row.mat-mdc-header-row, .mat-mdc-table mat-row.mat-mdc-row, .mat-mdc-table mat-footer-row.mat-mdc-footer-cell {
+    font-size: 12px;
+  }
+}
