--- a/src/app/modules/gerencia/consultar-arqueo-caja/consultar-arqueo-caja.component.html
+++ b/src/app/modules/gerencia/consultar-arqueo-caja/consultar-arqueo-caja.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="d-flex justify-content-between align-items-center w-100">
         <p class="titulo">Arqueos de Caja</p>
-        <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevoArqueo()">Registrar nuevo arqueo de caja</button>
+        <button mat-stroked-button color="warn" class="btn round mb-3 btn-registrar" (click)="registrarNuevoArqueo()">Registrar nuevo arqueo de caja</button>
       </div>
     </div>
     <mat-divider></mat-divider>
@@ -57,7 +57,7 @@
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
-          <mat-table [dataSource]="tableDataSource" matSort>
+          <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
             <!-- Caja del arqueo -->
             <ng-container matColumnDef="caja">
               <mat-header-cell *matHeaderCellDef>CAJA</mat-header-cell>
