--- a/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.scss
+++ b/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.scss
@@ -2,7 +2,9 @@
   .custom-table {
     width: 100%;
     overflow-x: auto;  /* Habilitar el desplazamiento en pantallas medianas */
-
+  }
+  .btn-registrar {
+    padding: 25px;
   }
 }
 
