--- a/src/app/modules/promociones/consultar-promociones/consultar-promociones.component.scss
+++ b/src/app/modules/promociones/consultar-promociones/consultar-promociones.component.scss
@@ -30,3 +30,20 @@
   width: 100%;
   min-width: 750px;  /* Reducimos el ancho mínimo en pantallas más pequeñas */
 }
+
+@media (max-width: 992px) {
+  .custom-table {
+    width: 100%;
+    overflow-x: auto;  /* Habilitar el desplazamiento en pantallas medianas */
+  }
+  .btn-registrar {
+    padding: 25px;
+  }
+}
+
+@media (max-width: 768px) {
+  .custom-table {
+    width: 100%;
+    min-width: 700px;  /* Reducimos el ancho mínimo en pantallas más pequeñas */
+  }
+}
