--- a/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.scss
+++ b/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.scss
@@ -17,6 +17,8 @@
 .disabled-table {
   pointer-events: none;
   opacity: 0.6;
+  width: 100%;
+  min-width: 750px;
 }
 
 h3 {
@@ -38,3 +40,21 @@ h3 {
   display: block;
   margin-top: 5px;
 }
+
+@media (max-width: 992px) {
+  .disabled-table {
+    width: 100%;
+    overflow-x: auto;  /* Habilitar el desplazamiento en pantallas medianas */
+  }
+  .btn-registrar {
+    padding: 25px;
+  }
+}
+
+@media (max-width: 768px) {
+  .disabled-table {
+    width: 100%;
+    min-width: 700px;  /* Reducimos el ancho mínimo en pantallas más pequeñas */
+  }
+}
+
