--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
@@ -112,7 +112,7 @@
       <mat-card-content>
         <div class="row">
           <div class="col-md-12">
-            <mat-table [dataSource]="tableDataSource" matSort [class.disabled-table]="formDesactivado || listaVentasDeshabilitada">
+            <mat-table [dataSource]="tableDataSource" matSort class="custom-table" [class.disabled-table]="formDesactivado || listaVentasDeshabilitada">
 
               <ng-container matColumnDef="id">
                 <mat-header-cell *matHeaderCellDef mat-sort-header>VENTA</mat-header-cell>
