--- a/src/app/modules/empleados/consultar-asistencia/consultar-asistencia.component.html
+++ b/src/app/modules/empleados/consultar-asistencia/consultar-asistencia.component.html
@@ -76,7 +76,7 @@
         <mat-card-content>
           <div class="row">
             <div class="col-md-12">
-              <mat-table [dataSource]="tableDataSource" matSort>
+              <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
 
                 <!-- Columna Empleado -->
                 <ng-container matColumnDef="nombre">
@@ -160,7 +160,7 @@
         <mat-card-content>
           <div class="row">
             <div class="col-md-12">
-              <mat-table [dataSource]="tableDataSourceLicencia" matSort>
+              <mat-table [dataSource]="tableDataSourceLicencia" matSort class="custom-table">
 
                 <!-- Columna Empleado -->
                 <ng-container matColumnDef="nombre">
