--- a/src/app/modules/empleados/marcar-asistencia/marcar-asistencia.component.html
+++ b/src/app/modules/empleados/marcar-asistencia/marcar-asistencia.component.html
@@ -116,7 +116,7 @@
         <mat-card-content>
           <div class="row">
             <div class="col-md-12">
-              <mat-table [dataSource]="tableDataSourceAsistencia" matSort>
+              <mat-table [dataSource]="tableDataSourceAsistencia" matSort class="custom-table">
 
                 <!-- Nombre del empleado -->
                 <ng-container matColumnDef="nombreApellido">
@@ -199,7 +199,7 @@
         <mat-card-content>
           <div class="row">
             <div class="col-md-12">
-              <mat-table [dataSource]="tableDataSourceLicencia" matSort>
+              <mat-table [dataSource]="tableDataSourceLicencia" matSort class="custom-table">
 
                 <!-- Nombre del empleado -->
                 <ng-container matColumnDef="nombreApellido">
