--- a/src/app/modules/inventario/consultar-inventario/consultar-inventario.component.html
+++ b/src/app/modules/inventario/consultar-inventario/consultar-inventario.component.html
@@ -65,7 +65,7 @@
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
-          <mat-table [dataSource]="tableDataSource" matSort>
+          <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
             <ng-container matColumnDef="imgProducto">
               <mat-header-cell *matHeaderCellDef>IMAGEN</mat-header-cell>
               <mat-cell *matCellDef="let detalleProducto">
