--- a/src/app/modules/pedidos/registrar-pedido/registrar-pedido.component.html
+++ b/src/app/modules/pedidos/registrar-pedido/registrar-pedido.component.html
@@ -47,7 +47,7 @@
       <div class="col-md-3">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Fecha de Pedido</mat-label>
-          <input matInput [matDatepicker]="pickerPedido" [formControl]="txFechaPedido" />
+          <input matInput [matDatepicker]="pickerPedido" [formControl]="txFechaPedido" [max]="this.fechaHoy"/>
           <mat-datepicker-toggle matSuffix [for]="pickerPedido"></mat-datepicker-toggle>
           <mat-datepicker #pickerPedido></mat-datepicker>
         </mat-form-field>
@@ -57,7 +57,7 @@
       <div class="col-md-3">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Fecha de Entrega</mat-label>
-          <input matInput [matDatepicker]="pickerEntrega" [formControl]="txFechaEntrega" />
+          <input matInput [matDatepicker]="pickerEntrega" [formControl]="txFechaEntrega" [min]="this.txFechaPedido.value"/>
           <mat-datepicker-toggle matSuffix [for]="pickerEntrega"></mat-datepicker-toggle>
           <mat-datepicker #pickerEntrega></mat-datepicker>
         </mat-form-field>
