--- a/src/app/modules/pedidos/registrar-pedido/registrar-pedido.component.html
+++ b/src/app/modules/pedidos/registrar-pedido/registrar-pedido.component.html
@@ -158,7 +158,7 @@
               <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
               <mat-row *matRowDef="let row; columns: columnas;"></mat-row>
             </mat-table>
-            <mat-paginator *ngIf="this.productos.length > 0"
+            <mat-paginator
                            [length]="this.productos.length"
                            [disabled]="formDesactivado"
                            [pageSize]="10"
