fix: mal calculo de total y cantidad en comprob

--- a/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.html
+++ b/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.html
@@ -118,7 +118,7 @@
 
               <div class="row align-items-center text-center mb-3 pedido-total">
                 <div class="col">
-                  <strong>Total:</strong> ${{ pedido.total }}
+                  <strong>Total:</strong> ${{ pedido.total | number:'1.2-2':'es-AR' }}
                 </div>
               </div>
 
