--- a/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.scss
+++ b/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.scss
@@ -5,24 +5,55 @@
   position: relative;
 }
 
-@media (max-width: 992px) {
-  .custom-table {
-    width: 100%;
-    overflow-x: auto;  /* Habilitar el desplazamiento en pantallas medianas */
+.container {
+  max-width: 100%;
+  overflow-x: hidden; /* Evita desbordamiento horizontal */
+}
 
-  }
+
+@media (max-width: 960px) {
+
   .btn-registrar {
     padding: 25px;
   }
-  .mat-mdc-table mat-header-row.mat-mdc-header-row, .mat-mdc-table mat-row.mat-mdc-row, .mat-mdc-table mat-footer-row.mat-mdc-footer-cell {
-    font-size: 12px;
-  }
-}
 
-@media (max-width: 768px) {
-  .custom-table {
-    width: 100%;
-    min-width: 700px;  /* Reducimos el ancho mínimo en pantallas más pequeñas */
+  .mat-mdc-table mat-header-row.mat-mdc-header-row, .mat-mdc-table mat-row.mat-mdc-row {
+    height: unset;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ddd;
+    margin-bottom: 10px;
+    background: #fff;
+    padding: 10px;
   }
+
+  .mat-mdc-table mat-header-row.mat-mdc-header-row {
+    display: none; /* Oculta la cabecera */
+  }
+
+  .mat-mdc-row mdc-data-table__row cdk-row queue-row ng-star-inserted {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    padding: 5px 0;
+  }
+
+  .mat-mdc-table .mat-mdc-cell:before {
+    content: attr(data-label); /* Usa el atributo data-label como etiqueta */
+    flex: 0 0 40%; /* Etiqueta a la izquierda */
+    font-weight: bold;
+    color: #333;
+    text-transform: uppercase;
+  }
+
+  .mat-mdc-cell:first-of-type, mat-header-cell:first-of-type {
+    padding: 0 16px 0 16px !important;
+  }
+
+  .mat-mdc-table .mat-mdc-cell {
+    border-bottom: 1px solid #ddd;
+  }
+
 }
 
