mat-divider en QR dialog

--- a/src/app/modules/qr-ventana/qr-ventana.component.html
+++ b/src/app/modules/qr-ventana/qr-ventana.component.html
@@ -1,4 +1,3 @@
-
 <div class="container py-3 col-xl-11 form-emergente">
   <div class="row">
     <div class="col d-flex justify-content-between align-items-center">
@@ -13,7 +12,7 @@
     </div>
   </div>
 
-<!--  <mat-card class="p-3">-->
+  <!--  <mat-card class="p-3">-->
   <div class="estado-pago d-flex flex-column align-items-center mt-3" [ngClass]="estadoPago.toLowerCase()">
     <mat-icon
       [fontIcon]="icono"
@@ -21,7 +20,10 @@
     </mat-icon>
     <span class="estado-text">{{ estadoPago }}</span>
   </div>
-<!--  </mat-card>-->
+  <!--  </mat-card>-->
+
+  <br>
+  <mat-divider></mat-divider>
 
   <div class="row pt-4">
     <div class="col d-flex justify-content-end">
