--- a/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
+++ b/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
@@ -97,46 +97,31 @@
     <mat-spinner></mat-spinner>
   </div>
 
-
-
   <mat-card class="mat-card" [hidden]="pedidos.length === 0">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
-          <mat-table [dataSource]="tableDataSource" matSort>
-            <!-- Columna Fecha de Emisión -->
+          <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
             <ng-container matColumnDef="fechaEmision">
               <mat-header-cell *matHeaderCellDef mat-sort-header>FECHA DE EMISIÓN</mat-header-cell>
-              <mat-cell *matCellDef="let pedido" data-label="Fecha de emisión">
-                {{ pedido.fechaEmision | date: 'dd/MM/yyyy' }}
-              </mat-cell>
+              <mat-cell *matCellDef="let pedido" data-label="Fecha de emision">{{ pedido.fechaEmision | date: 'dd/MM/yyyy' }}</mat-cell>
             </ng-container>
 
-            <!-- Columna Número de Pedido -->
             <ng-container matColumnDef="numeroPedido">
               <mat-header-cell *matHeaderCellDef mat-sort-header>NÚMERO DE ORDEN</mat-header-cell>
-              <mat-cell *matCellDef="let pedido" data-label="Número de orden">
-                {{ pedido.id }}
-              </mat-cell>
+              <mat-cell *matCellDef="let pedido" data-label="Pedido">{{ pedido.id }}</mat-cell>
             </ng-container>
 
-            <!-- Columna Proveedor -->
             <ng-container matColumnDef="proveedor">
               <mat-header-cell *matHeaderCellDef>PROVEEDOR</mat-header-cell>
-              <mat-cell *matCellDef="let pedido" data-label="Proveedor">
-                {{ pedido.proveedor.nombre }}
-              </mat-cell>
+              <mat-cell *matCellDef="let pedido" data-label="Proveedor">{{ pedido.proveedor.nombre }}</mat-cell>
             </ng-container>
 
-            <!-- Columna Total -->
             <ng-container matColumnDef="total">
               <mat-header-cell *matHeaderCellDef mat-sort-header>TOTAL</mat-header-cell>
-              <mat-cell *matCellDef="let pedido" data-label="Total">
-                $ {{ pedido.total | number:'1.2-2':'es-AR' }}
-              </mat-cell>
+              <mat-cell *matCellDef="let pedido" data-label="Subtotal" >$ {{ pedido.total | number:'1.2-2':'es-AR'}}</mat-cell>
             </ng-container>
 
-            <!-- Columna Estado -->
             <ng-container matColumnDef="estado">
               <mat-header-cell *matHeaderCellDef mat-sort-header>ESTADO</mat-header-cell>
               <mat-cell *matCellDef="let pedido" data-label="Estado">
@@ -151,7 +136,6 @@
               </mat-cell>
             </ng-container>
 
-            <!-- Columna Acciones -->
             <ng-container matColumnDef="acciones">
               <mat-header-cell *matHeaderCellDef>ACCIONES</mat-header-cell>
               <mat-cell *matCellDef="let pedido" data-label="Acciones">
@@ -161,32 +145,28 @@
                 <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verPedido(pedido, true)">
                   <mat-icon class="editar">edit</mat-icon>
                 </button>
-                <button mat-icon-button color="primary" matTooltip="Eliminar" (click)="eliminarPedido(pedido.id)">
+                <button mat-icon-button color="primary"  matTooltip="Eliminar" (click)="eliminarPedido(pedido.id)">
                   <mat-icon class="eliminar">delete</mat-icon>
                 </button>
-                <button mat-icon-button color="primary" matTooltip="Imprimir" (click)="imprimirPedido(pedido)">
+                <button mat-icon-button color="primary"  matTooltip="Imprimir" (click)="imprimirPedido(pedido)">
                   <mat-icon class="imprimir">print</mat-icon>
                 </button>
               </mat-cell>
             </ng-container>
 
-            <!-- Header y filas -->
             <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
             <mat-row class="queue-row" *matRowDef="let row; columns: columnas"></mat-row>
+
           </mat-table>
 
-          <!-- Paginador -->
           <mat-paginator
-            [length]="this.pedidos.length"
-            [pageSize]="10"
-            [pageSizeOptions]="[5, 10, 20]"
-            showFirstLastButtons
-          ></mat-paginator>
+                         [length]="this.pedidos.length"
+                         [pageSize]="10"
+                         [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
       </div>
     </mat-card-content>
   </mat-card>
-
 
   <h5 *ngIf="!isLoading && !(this.pedidos.length > 0)" class="alert alert-secondary text-center">
     No se encuentran ordenes de compra para mostrar, realice una nueva búsqueda.
