--- a/src/app/modules/gerencia/consultar-arqueo-caja/consultar-arqueo-caja.component.html
+++ b/src/app/modules/gerencia/consultar-arqueo-caja/consultar-arqueo-caja.component.html
@@ -58,6 +58,12 @@
       <div class="row">
         <div class="col-md-12">
           <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
+            <!-- ID del arqueo -->
+            <ng-container matColumnDef="id">
+              <mat-header-cell *matHeaderCellDef mat-sort-header>ARQUEO</mat-header-cell>
+              <mat-cell *matCellDef="let arqueo">{{ arqueo.id }}</mat-cell>
+            </ng-container>
+
             <!-- Caja del arqueo -->
             <ng-container matColumnDef="caja">
               <mat-header-cell *matHeaderCellDef>CAJA</mat-header-cell>
