--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -18,7 +18,7 @@
             </span>
           </button>
           <mat-menu #menu="matMenu">
-            <button mat-menu-item class="btn" (click)="exit()">
+            <button mat-menu-item class="btn" (click)="toggleTheme()">
               <mat-icon>wb_sunny</mat-icon>
               Modo oscuro
             </button>
