--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,3 +1,14 @@
+.header {
+  border-bottom: solid 1px #dddd;
+}
+
+.dark-mode {
+  background: #2A2A3B;
+  color: white;
+}
+
+
+
 button:focus {
   outline: 0 !important;
   box-shadow: none !important;
