--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -12,16 +12,6 @@
   }
 }
 
-.mat-mdc-menu-content {
-  background-color: var(--menu-bg) !important;
-  color: var(--menu-item-color) !important;
-}
-
-.mat-mdc-menu-item:hover {
-  background-color: var(--menu-item-hover-bg) !important;
-  color: #ffffff !important; /* Texto blanco al hover */
-}
-
 button:focus {
   outline: 0 !important;
   box-shadow: none !important;
@@ -39,37 +29,11 @@ button:focus {
 
 mat-sidenav {
   width: 15%;
-  background-color: whitesmoke;
+  background-color: red;
 }
 
 .toolbar img {
   margin: 0 16px;
-}
-
-.menu-horizontal {
-  padding: 0;
-
-  .mat-list-item {
-    display: inline-block;
-    height: auto;
-    width: auto;
-    font-weight: 600;
-    color: white;
-  }
-}
-
-.menu-h {
-  width: 100%;
-}
-
-.example-container {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
 }
 
 .header-logo {
@@ -84,7 +48,6 @@ ul li {
 }
 
 .mat-button {
-  color: white !important;
   align-content: center;
 }
 
