--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
   --header-bg: #f5f5f5; /* Fondo del header para el tema claro */
   --header-color: #000000; /* Color del texto para el tema claro */
   --menu-bg: #ffffff; /* Fondo del menú para el tema claro */
-  --menu-item-hover-bg: #dddddd; /* Fondo de los ítems al hover (claro) */
+  --menu-item-hover-bg: #efefef; /* Fondo de los ítems al hover (claro) */
   --menu-item-color: #000000; /* Color del texto del menú (claro) */
   --border-color-nav: #ddd;
 }
