--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="header" [class.dark-mode]="darkMode">
   <mat-toolbar-row>
     <div>
-      <button id="btnHeader" mat-icon-button class="btn btn-menu" color="white" matTooltip="Menu" [disabled]="!estaLogeado" (click)="toggleSideBar()">
+      <button id="btnHeader" mat-icon-button class="btn btn-menu" matTooltip="Menu" [disabled]="!estaLogeado" (click)="toggleSideBar()">
         <mat-icon>menu</mat-icon>
       </button>
       <a class="ml-2" href="/">
@@ -17,7 +17,7 @@
               {{nombreApellido}}
             </span>
           </button>
-          <mat-menu #menu="matMenu" [class.dark-mode]="darkMode">
+          <mat-menu #menu="matMenu" [class.dark-mode]="darkMode" >
             <button mat-menu-item (click)="toggleTheme()">
               <mat-icon>{{ darkMode ? 'wb_sunny' : 'brightness_3' }}</mat-icon>
               {{ darkMode ? 'Modo claro' : 'Modo oscuro' }}
