fondo de drawer

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@
 
 mat-drawer-container {
   min-height: calc(100vh - 64px) !important;
-  background-color: #fdfdfd;
+  background-color: var(--bg-drawer);
 }
 
 .offSidebar {
@@ -17,5 +17,5 @@ mat-drawer-container {
   min-height: calc(100vh - 64px) !important;
   overflow-x: hidden !important;
   overflow-y: auto !important;
-  background-color: #fdfdfd;
+  background-color: var(--bg-drawer);
 }
