--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
   --menu-item-hover-bg: #efefef; /* Fondo de los ítems al hover (claro) */
   --menu-item-color: #000000; /* Color del texto del menú (claro) */
   --border-color-nav: #ddd;
+  --bg-drawer: #fdfdfd;
 }
 
 .dark-mode {
@@ -17,6 +18,7 @@
   --menu-item-hover-bg: #5A5A6E; /* Fondo de los ítems al hover (oscuro) */
   --menu-item-color: #EDEDED; /* Color del texto del menú (oscuro) */
   --border-color-nav: #1d1d23;
+  --bg-drawer: #161621;
 }
 
 
