--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <mat-drawer mode="side" class="mat-elevation-z9 onSidebar" [opened]="sideBarOpen" position="start">
     <app-sidebar (toggleSideBarForMe)="sideBarToggler($event)" [darkMode]="darkMode"></app-sidebar>
   </mat-drawer>
-  <mat-drawer-content class="drawer">
+  <mat-drawer-content class="drawer" [class.dark-mode]="darkMode">
     <router-outlet></router-outlet>
   </mat-drawer-content>
 </mat-drawer-container>
